# MyEngine

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Camera.hpp.78D464477365DE53.idx  Camera.hpp.D48AAF9E37D109D3.idx  Timer.hpp.A46BFA6E1C8B6ACB.idx  Timer.hpp.A59B315BADF9C819.idx  Timer.hpp.C7575041073146AA.idx  circleVertex.hpp.10B7751214056D88.idx  circleVertex.hpp.2E63B23530B63F72.idx  circleVertex.hpp.8DEE85E832E53A05.idx  circleVertex.hpp.DBFD83CF117AEFA7.idx  engine.hpp.0899DD2C09C6F984.idx  engine.hpp.2F88FE7661D48701.idx  engine.hpp.38CB56ACA61A94A2.idx  engine.hpp.6DE9CDC67422A460.idx  engineVLK.cpp.16262D26ACA84947.idx  engineVLK.cpp.19CD9AACA23B43E9.idx  engineVLK.cpp.C72E753D886CE218.idx  engineVLK.hpp.2E9560E47C8D2E8A.idx  engineVLK.hpp.3E486E2B3A7B124B.idx  engineVLK.hpp.DB0F6916385462C9.idx  engineVLK.hpp.E5ADD9200B52E043.idx  imconfig.h.EFB2BE68C882A82A.idx  imconfig.h.F50864E2DC4ABE3B.idx  imgui.cpp.4FE5BD31C35FFD23.idx  imgui.cpp.AFAEC394279D9514.idx  imgui.h.476D0F03C733075D.idx  imgui.h.6BA6415C7A0E37F9.idx  imgui_demo.cpp.3DF658DEAC9BC353.idx  imgui_demo.cpp.A30EF82C384C8EB5.idx  imgui_draw.cpp.1EBAC50EA67637F9.idx  imgui_draw.cpp.744DDE2574A05364.idx  imgui_impl_glfw.cpp.75677C4DAB6FD787.idx  imgui_impl_glfw.cpp.A880C0A3CAD6FE8C.idx  imgui_impl_glfw.h.26597EBAD6EA5DFC.idx  imgui_impl_glfw.h.D6A91421B05AA912.idx  imgui_impl_vulkan.cpp.0DE4D4B1453CACEF.idx  imgui_impl_vulkan.cpp.CA9A2E4F77E9578E.idx  imgui_impl_vulkan.h.9ABBBD7A849513CD.idx  imgui_impl_vulkan.h.CFE5526F7C119E08.idx  imgui_internal.h.A72703BC89BD102F.idx  imgui_internal.h.DC19D002EA6F96BC.idx  (+70 more)
engine/: CMakeLists.txt  Camera.hpp  engine.hpp
engine/sdl/: engineSDL.hpp
engine/vlk/: circleVertex.hpp  engineVLK.cpp  engineVLK.hpp  inputsVLK.cpp  inputsVLK.hpp  renderer.cpp  renderer.hpp  textureVLK.hpp  ubo.hpp  utils.hpp  vertex.hpp  vulkanInit.hpp  vulkanRenderData.cpp  vulkanRenderData.hpp
engine/vlk/shaders/: circleShader.vert  circleVert.spv  quadShader.vert  quadVert.spv
simpleGame/: main.cpp
src/: Timer.hpp  engine.hpp
src/sdl/: engineSDL.cpp
src/vlk/: engineVLK.cpp  engineVLK.hpp  renderer.cpp  vulkanInit.cpp  vulkanInit.hpp  vulkanRenderData.cpp  vulkanRenderData.hpp  windowVLK.cpp
